hydroflow_plus_test/src/snapshots/hydroflow_plus_test__cluster__tests__map_reduce_ir@surface_graph_1.snap
---
source: hydroflow_plus_test/src/cluster.rs
expression: ir.surface_syntax_string()
---
1v1 = source_stream ({ use hydroflow_plus_cli_integration :: __staged :: runtime :: * ; let port = "port_0" ; let self_cli = FAKE ; { self_cli . port (port) . connect_local_blocking :: < ConnectedDirect > () . into_source () } });
2v1 = map (| res | { hydroflow_plus :: runtime_support :: bincode :: deserialize :: < std :: string :: String > (& res . unwrap ()) . unwrap () });
3v1 = map ({ use crate :: __staged :: cluster :: * ; | string | (string , ()) });
4v1 = fold_keyed :: < 'tick > ({ use crate :: __staged :: cluster :: * ; | | 0 } , { use crate :: __staged :: cluster :: * ; | count , _ | * count += 1 });
5v1 = inspect ({ use crate :: __staged :: cluster :: * ; | (string , count) | println ! ("partition count: {} - {}" , string , count) });
6v1 = map (| data | { hydroflow_plus :: runtime_support :: bincode :: serialize :: < (std :: string :: String , i32) > (& data) . unwrap () . into () });
7v1 = dest_sink ({ use hydroflow_plus_cli_integration :: __staged :: runtime :: * ; let port = "port_1" ; let self_cli = FAKE ; { self_cli . port (port) . connect_local_blocking :: < ConnectedDirect > () . into_sink () } });

1v1 -> 2v1;
2v1 -> 3v1;
3v1 -> 4v1;
4v1 -> 5v1;
6v1 -> 7v1;
5v1 -> 6v1;
