hydroflow_plus_test/src/snapshots/hydroflow_plus_test__cluster__tests__simple_cluster.snap
---
source: hydroflow_plus_test/src/cluster.rs
expression: builder.ir()
---
[
    ForEach {
        f: { use crate :: __staged :: cluster :: * ; | (id , d) | println ! ("node received: ({}, {:?})" , id , d) },
        input: Network {
            to_location: 0,
            serialize_pipeline: Some(
                Operator(
                    Operator {
                        path: "map",
                        args: [
                            "| data | { hydroflow_plus :: runtime_support :: bincode :: serialize :: < (u32 , i32) > (& data) . unwrap () . into () }",
                        ],
                    },
                ),
            ),
            sink_expr: null,
            source_expr: null,
            deserialize_pipeline: Some(
                Operator(
                    Operator {
                        path: "map",
                        args: [
                            "| res | { let (id , b) = res . unwrap () ; (id , hydroflow_plus :: runtime_support :: bincode :: deserialize :: < (u32 , i32) > (& b) . unwrap ()) }",
                        ],
                    },
                ),
            ),
            input: PipelineOp {
                kind: "inspect",
                gen_pipeline: <function>,
                input: Network {
                    to_location: 1,
                    serialize_pipeline: Some(
                        Operator(
                            Operator {
                                path: "map",
                                args: [
                                    "| (id , data) | { (id , hydroflow_plus :: runtime_support :: bincode :: serialize :: < (u32 , i32) > (& data) . unwrap () . into ()) }",
                                ],
                            },
                        ),
                    ),
                    sink_expr: null,
                    source_expr: null,
                    deserialize_pipeline: Some(
                        Operator(
                            Operator {
                                path: "map",
                                args: [
                                    "| res | { hydroflow_plus :: runtime_support :: bincode :: deserialize :: < (u32 , i32) > (& res . unwrap ()) . unwrap () }",
                                ],
                            },
                        ),
                    ),
                    input: PipelineOp {
                        kind: "map",
                        gen_pipeline: <function>,
                        input: CrossProduct(
                            PipelineOp {
                                kind: "map",
                                gen_pipeline: <function>,
                                input: Source {
                                    source: Iter(
                                        { use hydroflow_plus_cli_integration :: __staged :: deploy :: * ; panic ! () },
                                    ),
                                    produces_delta: false,
                                    location_id: 0,
                                },
                            },
                            Source {
                                source: Iter(
                                    { use crate :: __staged :: cluster :: * ; 0 .. 5 },
                                ),
                                produces_delta: false,
                                location_id: 0,
                            },
                        ),
                    },
                },
            },
        },
    },
]
